--- a/Manifest.json
+++ b/Manifest.json
@@ -2,10 +2,18 @@
   "name": "repost",
   "version": "0.1",
   "description": "experience together",
-  "browser_action": {
-    "default_icon": "icon.jpeg"
+  "app": {
+    "launch": {
+      "local_path": "main.html"
+    }
+  },
+  "icons": {
+    "16": "icon.jpeg"
   },
   "permissions": [
-    "http://api.flickr.com/"
+    "unlimitedStorage",
+    "notifications",
+    "http://*/",
+    "https://*/"
   ]
 }
