--- a/Manifest.json
+++ b/Manifest.json
@@ -11,6 +11,7 @@
     "16": "icon.jpeg"
   },
   "permissions": [
+    "contextMenus"
     "unlimitedStorage",
     "notifications",
     "http://*/",
