--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
     {
       "all_frames": true,
       "matches": ["http://*/*","https://*/*"],
+      "css" : ["content.css"],
       "js": ["content.js"],
       "run_at": "document_end"
     }
