--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,9 @@
   "icons": {
     "16": "icon.jpeg"
   },
+  "plugins": [
+    { "path": "librpl.so"  }
+  ],
   "permissions": [
     "tabs",
     "unlimitedStorage",
