Added plugin script.. Doesn't work as of yet also a few changes so we don't lose plugin on startup

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
     "16": "icon.jpeg"
   },
   "plugins": [
-    { "path": "librpl.so"  }
+    { "path": "librpl"  }
   ],
   "permissions": [
     "tabs",
