Added some test code to check out how events work with blocking calls

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
     "16": "icon.jpeg"
   },
   "plugins": [
-    { "path": "librpl"  }
+    { "path": "librpl.so"  }
   ],
   "permissions": [
     "tabs",
