--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,7 @@
   "icons": {
     "16": "icon.jpeg"
   },
-  plugins": [
-    { "path": "librpl.so"  }
+  "plugins": [
   ],
   "permissions": [
     "tabs",
