Made the manifest platform independent and touched a few files so the plugin loads. Once it has loaded it then checks the list to see whether it has the correct plugin. The junk files won't be loaded but the correct one will. Removed some junky old bash script also

--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,8 @@
   },
   "omnibox": {"keyword" : "repost"},
   "plugins": [
+    { "path": "rpl.plugin"  },
+    { "path": "nprpl.dll"  },
     { "path": "librpl.so"  }
   ],
   "permissions": [
