--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,9 @@
     }
   ],
   "icons": {
-    "16": "icon.jpeg"
+    "16": "icon-16.jpeg",
+    "48": "icon-48.jpeg",
+    "128": "icon-128.jpeg"
   },
   "omnibox": {"keyword" : "repost"},
   "plugins": [
