Adding bootstrapper to ensure only a single tab is open

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "experience together",
   "app": {
     "launch": {
-      "local_path": "main.html"
+      "local_path": "bootstrap.html"
     }
   },
   "options_page": "options.html",
