--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
       "local_path": "bootstrap.html"
     }
   },
+  "background_page": "background.html",
   "options_page": "options.html",
   "content_scripts": [
     {
