You can now text post from any page as well as cleaning up the content.css to ensure we don't polute others pages. fixes #57

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "repost",
-  "version": "0.1",
-  "description": "experience together",
+  "name": "Repost",
+  "version": "0.3",
+  "description": "Ricky Bobby",
   "app": {
     "launch": {
       "local_path": "bootstrap.html"
@@ -13,7 +13,7 @@
       "all_frames": true,
       "matches": ["http://*/*","https://*/*"],
       "css" : ["css/content.css"],
-      "js": ["js/content.js","js/posttext.js","js/postimage.js"],
+      "js": ["js/textpostbox.js","js/content.js","js/posttext.js","js/postimage.js"],
       "run_at": "document_end"
     }
   ],
