--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
       "all_frames": true,
       "matches": ["http://*/*","https://*/*"],
       "css" : ["css/content.css"],
-      "js": ["js/textpostbox.js","js/content.js","js/posttext.js","js/postimage.js"],
+      "js": ["js/common.js", "js/textpostbox.js",
+                "js/content.js","js/posttext.js","js/postimage.js"],
       "run_at": "document_end"
     }
   ],
