--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,8 @@
     {
       "all_frames": true,
       "matches": ["http://*/*","https://*/*"],
-      "css" : ["css/content.css"],
-      "js": ["js/common.js", "js/textpostbox.js",
+      "css" : ["css/repost.css"],
+      "js": ["js/jquery-1.6.1.min.js", "js/common.js", "js/textpostbox.js",
                 "js/content.js","js/posttext.js","js/postimage.js"],
       "run_at": "document_end"
     }
