Brought back the content style sheet as it is the best way to stop pollution of others pages. Also moved everything under the repost namespace. Users can now send image post using enter as well as using the send button

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     {
       "all_frames": true,
       "matches": ["http://*/*","https://*/*"],
-      "css" : ["css/repost.css"],
+      "css" : ["css/content.css"],
       "js": ["js/jquery-1.6.1.min.js", "js/common.js", "js/textpostbox.js",
                 "js/content.js","js/posttext.js","js/postimage.js"],
       "run_at": "document_end"
